jsonschemadsl2ecore.trafo.opt/test/test94/invalidtests/example3.test94
{
	"adddv":"string is good",
	"xxcccxx":2,
	"zzzfff":5,
	"qqqeeesss":"less6"
}